--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ title: Home
 ---
 
 <!-- 조회수 확인  -->
-<div>
+<!-- <div>
   <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Feasehee.github.io&count_bg=%23555555&title_bg=%23555555&icon=github.svg&icon_color=%23FFFFFF&title=hits&edge_flat=false"/>
-</div>
+</div> -->
 
 <header>
   <h2>Category</h2>
