--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ title: Home
 <header>
   <h2>Category</h2>
   <nav>
-    <ol>
-      <li><h3><a href="/category/01_Java">Java</a></h3></li>
-      <li><h3><a href="/category/02_Web">Web</a></h3></li>
-      <li><h3><a href="/category/03_Spring">Spring</a></h3></li>
+    <ol class="font-lg">
+      <li><a href="/category/01_Java">Java</a></li>
+      <li><a href="/category/02_Web">Web</a></li>
+      <li><a href="/category/03_Spring">Spring</a></li>
     </ol>
   </nav>
 </header>
