--- a/search.html
+++ b/search.html
@@ -12,12 +12,12 @@ exclude_from_search: true
     <img src="{{ '/assets/tipuesearch/search.png' | relative_url }}" class="tipue_search_icon">
   </div>
   <div class="tipue_search_right">
-    <input type="text" name="q" id="tipue_search_input" pattern=".{1,}" title="At least 1 characters" required>
+    <input type="text" name="q" id="tipue_search_input" pattern=".{1,}" title="At least 1 characters" required placeholder="검색어를 입력하세요.">
   </div>
   <div style="clear: both;"></div>
 </form>
 
-<div id="tipue_search_content" class="bg-wh"></div>
+<div id="tipue_search_content"></div>
 
 <script>
 $(document).ready(function() {
