--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@ title: Home
       <li><a href="/category/01_Java">Java</a></li>
       <li><a href="/category/02_Web">Web</a></li>
       <li><a href="/category/03_Spring">Spring</a></li>
-      <li><a href="/category/04_Diagram">Diagram</a></li>
+      <li><a href="/category/04_React">React</a></li>
+      <li><a href="/category/05_Diagram">Diagram</a></li>
     </ol>
   </nav>
 </header>
